tests/ui/closures/2229_closure_analysis/repr_packed.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/repr_packed.rs:14:17
   |
LL |     let mut c = #[rustc_capture_analysis]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: attributes on expressions are experimental
  --> $DIR/repr_packed.rs:45:17
   |
LL |     let mut c = #[rustc_capture_analysis]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: attributes on expressions are experimental
  --> $DIR/repr_packed.rs:81:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: First Pass analysis includes:
  --> $DIR/repr_packed.rs:18:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let z1: &u8 = &foo.x;
...  |
LL | |         println!("({}, {})", z1, z2);
LL | |     };
   | |_____^
   |
note: Capturing foo[] -> Immutable
  --> $DIR/repr_packed.rs:21:24
   |
LL |         let z1: &u8 = &foo.x;
   |                        ^^^^^
note: Capturing foo[] -> Mutable
  --> $DIR/repr_packed.rs:23:32
   |
LL |         let z2: &mut u8 = &mut foo.y;
   |                                ^^^^^

error: Min Capture analysis includes:
  --> $DIR/repr_packed.rs:18:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let z1: &u8 = &foo.x;
...  |
LL | |         println!("({}, {})", z1, z2);
LL | |     };
   | |_____^
   |
note: Min Capture foo[] -> Mutable
  --> $DIR/repr_packed.rs:23:32
   |
LL |         let z2: &mut u8 = &mut foo.y;
   |                                ^^^^^

error: First Pass analysis includes:
  --> $DIR/repr_packed.rs:49:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let z1: &String = &foo.x;
...  |
LL | |         println!("({}, {})", z1, z2);
LL | |     };
   | |_____^
   |
note: Capturing foo[] -> Immutable
  --> $DIR/repr_packed.rs:52:28
   |
LL |         let z1: &String = &foo.x;
   |                            ^^^^^
note: Capturing foo[] -> Mutable
  --> $DIR/repr_packed.rs:54:33
   |
LL |         let z2: &mut u16 = &mut foo.y;
   |                                 ^^^^^

error: Min Capture analysis includes:
  --> $DIR/repr_packed.rs:49:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let z1: &String = &foo.x;
...  |
LL | |         println!("({}, {})", z1, z2);
LL | |     };
   | |_____^
   |
note: Min Capture foo[] -> Mutable
  --> $DIR/repr_packed.rs:54:33
   |
LL |         let z2: &mut u16 = &mut foo.y;
   |                                 ^^^^^

error: First Pass analysis includes:
  --> $DIR/repr_packed.rs:85:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{}", foo.x);
...  |
LL | |     };
   | |_____^
   |
note: Capturing foo[] -> Immutable
  --> $DIR/repr_packed.rs:88:24
   |
LL |         println!("{}", foo.x);
   |                        ^^^^^
note: Capturing foo[(0, 0)] -> ByValue
  --> $DIR/repr_packed.rs:92:18
   |
LL |         let _z = foo.x;
   |                  ^^^^^

error: Min Capture analysis includes:
  --> $DIR/repr_packed.rs:85:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{}", foo.x);
...  |
LL | |     };
   | |_____^
   |
note: Min Capture foo[] -> ByValue
  --> $DIR/repr_packed.rs:88:24
   |
LL |         println!("{}", foo.x);
   |                        ^^^^^ foo[] used here
...
LL |         let _z = foo.x;
   |                  ^^^^^ foo[] captured as ByValue here

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0658`.
